# flasksite

./: main.py  pyproject.toml  requirements.txt  todo.txt
ProjectFlask/: 2019rec.py  2020rec.py  __init__.py  flasksite.db  models.py  rec_2019.py  rec_2020.py  reg2020.py  routes.py  userfunctions.py  visuals.py
ProjectFlask/static/: Mainstyle.css  dark_theme.css  theme.css
ProjectFlask/static/javascript/: json_dfteam.json  manes.js  manes19.js  manesTeam.js
ProjectFlask/templates/: 404.html  alreadyAteam.html  base.html  buyplayer.html  createTeam.html  index.html  knnsearch.html  linearreg.html  login.html  myteam.html  myteams.html  player.html  register.html  similarplayers.html  sitetools.html  teams.html  userpref.html
datasets/: linearreg
todo/: Read.txt
